#1252: Converted GetFilterKinds to extend BasePaginatedMultipleEntitiesCommand